# hydra-heads

./: .gitignore  MCP.md  README.md  TODO.md  pyproject.toml  requirements.txt
hydra_heads/: __init__.py  cli.py  core.py  update_agents.py
hydra_heads/providers/: __init__.py  aider.py  claude.py  cline.py  codex.py  factory.py  forge.py  gemini.py  goose.py  kilo.py  kimi.py  ob1.py  opencode.py  openhands.py  pi.py  qwen.py
hydra_heads/scripts/: update-agents.sh
