[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-heads"
version = "0.1.0"
description = "Run multiple AI CLI tools in parallel with a shared prompt"
requires-python = ">=3.10"
dependencies = [
    "sh==2.2.2",
    "python-dotenv==1.2.2",
    "coloredlogs==15.0.1",
    "rich==14.3.3",
    "pyyaml==6.0.3",
    "tiktoken==0.12.0",
]

[project.scripts]
hydra-heads = "hydra_heads.cli:main"
hh = "hydra_heads.cli:main"

[tool.setuptools]
script-files = ["bin/update-agents"]

[tool.setuptools.packages.find]
include = ["hydra_heads*"]
